--- a/api/package.json
+++ b/api/package.json
@@ -98,7 +98,6 @@
         }
     },
     "lint-staged": {
-        "*.js,*.ts": "eslint --cache --fix",
-        "*.{js,ts,css,md}": "prettier --write"
+        "*.js,*.ts": "eslint --cache --fix"
     }
 }
