--- a/api/package.json
+++ b/api/package.json
@@ -2,19 +2,23 @@
     "name": "final-project-dream-team-1",
     "private": true,
     "scripts": {
-        "start": "npm run serve",
         "build": "npm run build-ts && npm run lint",
-        "serve": "node dist/server.js",
-        "watch-node": "nodemon dist/server.js",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "test": "jest --runInBand --coverage --verbose --detectOpenHandles",
         "build-ts": "node_modules/.bin/tsc",
-        "watch-ts": "tsc -w",
-        "watch-test": "npm run test -- --watchAll",
-        "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
         "debug": "npm run build && npm run watch-debug",
+        "lint": "eslint \"src/**/*.{js,ts}\" --quiet",
+        "lint:fix": "npm run lint --fix",
+        "serve": "node dist/server.js",
         "serve-debug": "nodemon --inspect dist/server.js",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
+        "start": "npm run serve",
+        "test": "jest --runInBand --coverage --verbose --detectOpenHandles",
+        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+        "watch-node": "nodemon dist/server.js",
+        "watch-test": "npm run test -- --watchAll",
+        "watch-ts": "tsc -w"
+    },
+    "resolutions": {
+        "minimist": "^1.2.5"
     },
     "dependencies": {
         "async": "^3.2.0",
@@ -81,23 +85,10 @@
         "chai": "^4.2.0",
         "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
-        "husky": "^4.2.3",
-        "lint-staged": "^10.1.1",
         "nodemon": "^2.0.2",
         "supertest": "^4.0.2",
         "ts-jest": "^25.2.1",
         "ts-node": "^8.7.0",
         "typescript": "^3.8.3"
-    },
-    "resolutions": {
-        "minimist": "^1.2.5"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "lint-staged": {
-        "*.js,*.ts": "eslint --cache --fix"
     }
 }
