--- a/client/package.json
+++ b/client/package.json
@@ -35,21 +35,21 @@
         }
     },
     "dependencies": {
-        "@date-io/date-fns": "^2.4.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.27",
-        "@fortawesome/free-brands-svg-icons": "^5.12.1",
-        "@fortawesome/free-regular-svg-icons": "^5.12.1",
-        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@date-io/date-fns": "^2.5.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
+        "@fortawesome/free-regular-svg-icons": "^5.13.0",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@testing-library/jest-dom": "^5.1.1",
-        "@testing-library/user-event": "^10.0.0",
+        "@testing-library/jest-dom": "^5.3.0",
+        "@testing-library/user-event": "^10.0.1",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "core-js": "^3.6.4",
-        "date-fns": "^2.11.0",
+        "date-fns": "^2.11.1",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
-        "react-bootstrap": "^1.0.0-beta.17",
+        "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
@@ -66,17 +66,17 @@
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/polyfill": "^7.8.7",
         "@babel/preset-env": "^7.9.0",
-        "@babel/preset-react": "^7.9.0",
+        "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@testing-library/react": "^10.0.1",
+        "@testing-library/react": "^10.0.2",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/eslint": "^6.1.9",
-        "@types/jest": "^25.1.4",
-        "@types/node": "^13.9.2",
+        "@types/jest": "^25.2.0",
+        "@types/node": "^13.11.0",
         "@types/node-sass": "^4.11.0",
-        "@types/react": "^16.9.23",
-        "@types/react-dom": "^16.9.5",
+        "@types/react": "^16.9.32",
+        "@types/react-dom": "^16.9.6",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
         "@types/react-transition-group": "^4.2.4",
@@ -99,13 +99,13 @@
         "file-loader": "^6.0.0",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
-        "jest": "^25.1.0",
+        "jest": "^25.2.7",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
-        "ts-jest": "^25.2.1",
+        "ts-jest": "^25.3.1",
         "typescript": "^3.8.3",
-        "webpack": "^4.42.0",
+        "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
     }
