--- a/client/package.json
+++ b/client/package.json
@@ -2,38 +2,54 @@
     "name": "goto-typescript",
     "version": "0.1.0",
     "private": true,
+    "scripts": {
+        "build": "webpack --config ./config/webpack.production.config.js && npm run lint",
+        "build-lib": "webpack --config ./config/webpack.library.config.js && npm run lint",
+        "lint": "eslint \"src/**/*.{js,ts,tsx}\" --quiet",
+        "lint:fix": "npm run lint -- --fix",
+        "refresh": "node ./scripts/refresh.js",
+        "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
+        "test": "jest"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js"
+        ],
+        "moduleNameMapper": {
+            "\\.(css|less)$": "identity-obj-proxy"
+        },
+        "modulePaths": [
+            "<rootDir>"
+        ],
+        "setupFiles": [
+            "<rootDir>/src/test/test-setup.js"
+        ],
+        "testMatch": [
+            "<rootDir>/src/test/*.test.(ts|tsx|js)"
+        ],
+        "transform": {
+            "^.+\\.(ts|tsx)$": "ts-jest",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/fileTransformer.js"
+        }
+    },
     "dependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.9.0",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/polyfill": "^7.8.7",
-        "@babel/preset-env": "^7.9.0",
-        "@babel/preset-react": "^7.9.0",
-        "@babel/preset-typescript": "^7.9.0",
-        "@date-io/date-fns": "^2.4.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.27",
-        "@fortawesome/free-brands-svg-icons": "^5.12.1",
-        "@fortawesome/free-regular-svg-icons": "^5.12.1",
-        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@date-io/date-fns": "^2.5.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
+        "@fortawesome/free-regular-svg-icons": "^5.13.0",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@testing-library/jest-dom": "^5.1.1",
-        "@testing-library/user-event": "^10.0.0",
-        "@types/node": "^13.9.2",
-        "@types/react-dom": "^16.9.5",
-        "@types/react-redux": "^7.1.7",
-        "@types/react-router-dom": "^5.1.3",
-        "@types/react-transition-group": "^4.2.4",
-        "@types/redux": "^3.6.0",
-        "@types/redux-thunk": "^2.1.0",
+        "@testing-library/jest-dom": "^5.3.0",
+        "@testing-library/user-event": "^10.0.1",
         "axios": "^0.19.2",
-        "babel-loader": "^8.1.0",
         "bootstrap": "^4.4.1",
         "core-js": "^3.6.4",
-        "date-fns": "^2.11.0",
-        "next": "^9.3.1",
+        "date-fns": "^2.11.1",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
-        "react-bootstrap": "^1.0.0-beta.17",
+        "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
@@ -44,60 +60,50 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0"
     },
-    "scripts": {
-        "test": "jest",
-        "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
-        "refresh": "node ./scripts/refresh.js",
-        "build": "webpack --config ./config/webpack.production.config.js",
-        "buildlib": "webpack --config ./config/webpack.library.config.js"
-    },
     "devDependencies": {
-        "@testing-library/react": "^10.0.1",
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.9.0",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/polyfill": "^7.8.7",
+        "@babel/preset-env": "^7.9.0",
+        "@babel/preset-react": "^7.9.4",
+        "@babel/preset-typescript": "^7.9.0",
+        "@testing-library/react": "^10.0.2",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/jest": "^25.1.4",
+        "@types/jest": "^25.2.0",
+        "@types/node": "^13.11.0",
         "@types/node-sass": "^4.11.0",
-        "@types/react": "^16.9.23",
+        "@types/react": "^16.9.32",
+        "@types/react-dom": "^16.9.6",
+        "@types/react-redux": "^7.1.7",
+        "@types/react-router-dom": "^5.1.3",
+        "@types/react-transition-group": "^4.2.4",
+        "@types/redux": "^3.6.0",
+        "@types/redux-thunk": "^2.1.0",
+        "@typescript-eslint/eslint-plugin": "^2.26.0",
+        "@typescript-eslint/parser": "^2.26.0",
+        "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
+        "eslint": "^6.8.0",
+        "eslint-config-react": "^1.1.7",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^3.0.0",
         "file-loader": "^6.0.0",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
-        "jest": "^25.1.0",
+        "jest": "^25.2.7",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
-        "ts-jest": "^25.2.1",
-        "tslint": "^6.1.0",
-        "tslint-immutable": "^6.0.1",
+        "ts-jest": "^25.3.1",
         "typescript": "^3.8.3",
-        "webpack": "^4.42.0",
+        "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
-    },
-    "jest": {
-        "modulePaths": [
-            "<rootDir>"
-        ],
-        "setupFiles": [
-            "<rootDir>/src/test/test-setup.js"
-        ],
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js"
-        ],
-        "moduleNameMapper": {
-            "\\.(css|less)$": "identity-obj-proxy"
-        },
-        "transform": {
-            "^.+\\.(ts|tsx)$": "ts-jest",
-            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/fileTransformer.js"
-        },
-        "testMatch": [
-            "<rootDir>/src/test/*.test.(ts|tsx|js)"
-        ]
     }
 }
