--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,6 +35,11 @@ jobs:
           popd
         env:
           CI: true
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./api/coverage/clover.xml
+          flags: api
   build-client:
     runs-on: ubuntu-latest
 
@@ -63,4 +68,9 @@ jobs:
           popd
         env:
           CI: true
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./client/coverage/clover.xml
+          flags: client
         
