--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,21 @@
         "serve": "node dist/server.js",
         "serve-debug": "nodemon --inspect dist/server.js",
         "start": "npm run serve",
-        "test": "jest --runInBand --coverage --verbose --detectOpenHandles",
+        "test": "jest -i",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
         "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
         "watch-node": "nodemon dist/server.js",
         "watch-test": "npm run test -- --watchAll",
         "watch-ts": "tsc -w"
+    },
+    "jest": {
+        "collectCoverage": true,
+        "coverageDirectory": "./coverage/",
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testPathIgnorePatterns": [
+            "<rootDir>/dist/"
+        ]
     },
     "resolutions": {
         "minimist": "^1.2.5"
