--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,9 @@
         "transform": {
             "^.+\\.(ts|tsx)$": "ts-jest",
             "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/fileTransformer.js"
-        }
+        },
+        "coverageDirectory": "./coverage/",
+        "collectCoverage": true
     },
     "dependencies": {
         "@date-io/date-fns": "^2.5.0",
