--- a/codecov.yml
+++ b/codecov.yml
@@ -1,17 +1,17 @@
 coverage:
   status:
     project:
-      default:
-        informational: true
-      client:
-        flags: 
-          - client
-      api:
-        flags: 
-          - api
-      banner:
-        flags: 
-          - banner
+      threshold: 5%
+      informational: true
+    client:
+      flags: 
+        - client
+    api:
+      flags: 
+        - api
+    banner:
+      flags: 
+        - banner
 
 flags:
   api:
