--- a/api/package.json
+++ b/api/package.json
@@ -3,19 +3,14 @@
     "private": true,
     "scripts": {
         "build": "npm run build-ts && npm run lint",
-        "build-ts": "node_modules/.bin/tsc",
-        "debug": "npm run build && npm run watch-debug",
+        "build-ts": "tec",
         "lint": "eslint \"src/**/*.{js,ts}\" --quiet",
         "lint:fix": "npm run lint -- --fix",
-        "serve": "node dist/server.js",
-        "serve-debug": "nodemon --inspect dist/server.js",
-        "start": "npm run serve",
+        "start": "node dist/server.js",
         "test": "jest -i",
-        "watch": "npm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-        "watch-node": "nodemon dist/server.js",
-        "watch-test": "npm run test -- --watchAll",
-        "watch-ts": "tsc -w --preserveWatchOutput"
+        "watch": "nodemon --exec ts-node src/server.ts",
+        "watch:test": "npm run test -- --watchAll",
+        "watch:ts": "tsc -w --preserveWatchOutput"
     },
     "jest": {
         "collectCoverage": true,
@@ -66,7 +61,6 @@
         "@types/bcrypt-nodejs": "^0.0.31",
         "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
-        "@types/concurrently": "^5.1.0",
         "@types/cors": "^2.8.6",
         "@types/errorhandler": "^1.5.0",
         "@types/eslint": "^6.1.9",
@@ -89,7 +83,6 @@
         "@typescript-eslint/eslint-plugin": "^2.26.0",
         "@typescript-eslint/parser": "^2.26.0",
         "chai": "^4.2.0",
-        "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-prettier": "^3.1.2",
