--- a/banner-data/package.json
+++ b/banner-data/package.json
@@ -1,50 +1,44 @@
 {
-  "name": "banner-data",
-  "private": true,
-  "scripts": {
-    "build": "npm run build-ts && npm run lint",
-    "build-ts": "tsc",
-    "debug": "npm run build && npm run watch-debug",
-    "lint": "eslint \"**/*.{js,ts}\" --quiet",
-    "lint:fix": "npm run lint -- --fix",
-    "serve": "node dist/index.js",
-    "serve-debug": "nodemon --inspect dist/index.js",
-    "start": "npm run serve",
-    "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
-    "watch": "npm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "watch-node": "nodemon dist/index.js",
-    "watch-test": "npm run test -- --watch-files src --watch",
-    "watch-ts": "tsc -w --preserveWatchOutput"
-  },
-  "nyc": {
-    "exclude": "**/*.spec.ts",
-    "include": "src"
-  },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "axios-cookiejar-support": "^0.5.1",
-    "dotenv": "^8.2.0",
-    "mongodb": "^3.5.5",
-    "tough-cookie": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/chai": "^4.2.11",
-    "@types/dotenv": "^8.2.0",
-    "@types/mocha": "^7.0.2",
-    "@types/mongodb": "^3.5.5",
-    "@types/node": "^13.11.1",
-    "@types/tough-cookie": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "chai": "^4.2.0",
-    "concurrently": "^5.1.0",
-    "eslint": "^6.8.0",
-    "mocha": "^7.1.1",
-    "nodemon": "^2.0.3",
-    "nyc": "^15.0.1",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
-  }
+    "name": "banner-data",
+    "private": true,
+    "scripts": {
+        "build": "npm run build-ts && npm run lint",
+        "build:ts": "tsc",
+        "lint": "eslint \"**/*.{js,ts}\" --quiet",
+        "lint:fix": "npm run lint -- --fix",
+        "start": "node dist/index.js",
+        "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
+        "watch": "nodemon --exec ts-node src/index.ts",
+        "watch:test": "npm run test -- --watch-files src --watch",
+        "watch:ts": "tsc -w --preserveWatchOutput"
+    },
+    "nyc": {
+        "exclude": "**/*.spec.ts",
+        "include": "src"
+    },
+    "dependencies": {
+        "axios": "^0.19.2",
+        "axios-cookiejar-support": "^0.5.1",
+        "dotenv": "^8.2.0",
+        "mongoose": "^5.9.7",
+        "tough-cookie": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/chai": "^4.2.11",
+        "@types/dotenv": "^8.2.0",
+        "@types/mocha": "^7.0.2",
+        "@types/mongoose": "^5.7.10",
+        "@types/node": "^13.11.1",
+        "@types/tough-cookie": "^2.3.7",
+        "@typescript-eslint/eslint-plugin": "^2.27.0",
+        "@typescript-eslint/parser": "^2.27.0",
+        "chai": "^4.2.0",
+        "eslint": "^6.8.0",
+        "mocha": "^7.1.1",
+        "nodemon": "^2.0.3",
+        "nyc": "^15.0.1",
+        "ts-node": "^8.8.2",
+        "typescript": "^3.8.3"
+    }
 }
