--- a/banner/package.json
+++ b/banner/package.json
@@ -4,18 +4,13 @@
     "scripts": {
         "build": "npm run build-ts && npm run lint",
         "build-ts": "tsc",
-        "debug": "npm run build && npm run watch-debug",
         "lint": "eslint \"**/*.{js,ts}\" --quiet",
         "lint:fix": "npm run lint -- --fix",
-        "serve": "node dist/index.js",
-        "serve-debug": "nodemon --inspect dist/index.js",
-        "start": "npm run serve",
+        "start": "node dist/index.js",
         "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
-        "watch": "npm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-        "watch-node": "nodemon dist/index.js",
-        "watch-test": "npm run test -- --watch-files src --watch",
-        "watch-ts": "tsc -w --preserveWatchOutput"
+        "watch": "nodemon --exec ts-node src/index.ts",
+        "watch:test": "npm run test -- --watch-files src --watch",
+        "watch:ts": "tsc -w --preserveWatchOutput"
     },
     "nyc": {
         "exclude": "**/*.spec.ts",
@@ -30,7 +25,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "ioredis": "^4.16.1",
-        "mongodb": "^3.5.5",
+        "mongoose": "^5.9.7",
         "morgan": "^1.10.0",
         "request": "^2.88.2",
         "request-promise-native": "^1.0.8",
@@ -46,7 +41,7 @@
         "@types/express": "^4.17.3",
         "@types/ioredis": "^4.14.9",
         "@types/mocha": "^7.0.2",
-        "@types/mongodb": "^3.5.4",
+        "@types/mongoose": "^5.7.10",
         "@types/morgan": "^1.9.0",
         "@types/node": "^13.11.0",
         "@types/request": "^2.48.4",
@@ -55,7 +50,6 @@
         "@typescript-eslint/eslint-plugin": "^2.26.0",
         "@typescript-eslint/parser": "^2.26.0",
         "chai": "^4.2.0",
-        "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-prettier": "^3.1.2",
