--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -25,10 +25,10 @@ jobs:
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
           Write-Host Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:$tag .
-          docker tag docker.pkg.github.com/${{ github.repository }}/$project:$tag docker.pkg.github.com/${{ github.repository }}/$project:latest
-          docker push docker.pkg.github.com/${{ github.repository }}/$project:$tag
-          docker push docker.pkg.github.com/${{ github.repository }}/$project:latest
+          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$tag .
+          docker tag docker.pkg.github.com/${{ github.repository }}/$($project):$tag docker.pkg.github.com/${{ github.repository }}/$($project):latest
+          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$tag
+          docker push docker.pkg.github.com/${{ github.repository }}/$($project):latest
         }
 
     - name: Trigger Hooks
