--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -14,23 +14,22 @@ jobs:
     - name: docker build, push
       shell: pwsh
       run: |
-        $tag="${GITHUB_REF#refs/tags/}"
-
+        $tag="${{github.ref}}".Split("refs/tags/")
         Write-Host tag: $tag
 
-        Write-Host ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        docker login docker.pkg.github.com --username ${{github.actor}} --password ${{secrets.GITHUB_TOKEN}}
 
         docker build -t registrum_base -f Base.Dockerfile .
 
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
           Write-Host Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$tag .
-          docker tag docker.pkg.github.com/${{ github.repository }}/$($project):$tag docker.pkg.github.com/${{ github.repository }}/$($project):latest
-          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$tag
-          docker push docker.pkg.github.com/${{ github.repository }}/$($project):latest
+          docker build --target $project -t docker.pkg.github.com/${{github.repository}}/$($project):$tag .
+          docker tag docker.pkg.github.com/${{github.repository}}/$($project):$tag docker.pkg.github.com/${{github.repository}}/$($project):latest
+          docker push docker.pkg.github.com/${{github.repository}}/$($project):$tag
+          docker push docker.pkg.github.com/${{github.repository}}/$($project):latest
         }
 
     - name: Trigger Hooks
       run: |
-        curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.PROD_HOOK }}'
+        curl -X POST -H "Content-Type: application/json" -d "{}" '${{secrets.PROD_HOOK}}'
